# minimalist-interior-ballistics

./: .gitignore  100x697mm.json  README.md  build_and_install.bat  build_and_upload_to_testpypi.bat  de61b0de-a576-498a-a62e-bf7320fc1c5c.dmp  dekker.py  example.py  form_function_factory.py  gss.py  install_from_testpypi.bat  intg.py  main.py  minintbal.sublime-workspace  pdoc.bat  pre-commit.bat  pyproject.toml  requirements.txt  requirements_dev.txt  run_gui.py  run_pdoc.bat  run_pytest.bat  run_test.bat  shape.py  test.json
ballistics/: __init__.py  _countlines.py  _design_gun.py  bomb_state.py  charge.py  dekker.py  delta.py  design.py  design_gun.py  form_function.py  gss.py  gun.py  intg.py  known_charges.py  load.py  matching_problem.py  minimum_volume_problem.py  pressure_target.py  problem.py  propellants.csv  state.py
ballistics/gui/: __init__.py  gun_window.py  main.py  misc.py  propellant_window.py
ballistics/num/: __init__.py  dekker.py  gss.py  intg.py  secant.py
ballistics/problem/: __init__.py  base_problem.py  fixed_charge_problem.py  fixed_volume_problem.py  pressure_target.py
docs/: ballistics.html  build_docs.bat  index.html  minimalist_interior_ballistics.html  mkdocs.yml  run_server.bat  search.js
docs/ballistics/: _countlines.html  _design_gun.html  bomb_state.html  charge.html  dekker.html  delta.html  design.html  design_gun.html  form_function.html  gss.html  gui.html  gun.html  index.html  intg.html  known_charges.html  load.html  matching_problem.html  minimum_volume_problem.html  num.html  pressure_target.html  problem.html  state.html
docs/ballistics/design/: base_design.html  fixed_charge_design.html
docs/ballistics/gui/: gun_window.html  main.html  misc.html  propellant_window.html  themed_scrolled_text.html
docs/ballistics/num/: dekker.html  gss.html  intg.html  secant.html
docs/ballistics/problem/: base_problem.html  fixed_charge_problem.html  fixed_volume_problem.html  known_gun_problem.html  pressure_target.html
docs/docs/: interior_ballistics.md  propellant.md  theory.md
docs/minimalist_interior_ballistics/: _countlines.html  charge.html  design.html  form_function.html  gun.html  num.html  problem.html  state.html
docs/minimalist_interior_ballistics/design/: base_design.html  fixed_charge_design.html  fixed_volume_design.html
docs/minimalist_interior_ballistics/num/: dekker.html  gss.html  intg.html  (+1 more)
docs/site/: 404.html  index.html
misc/: aibcm_parser.py
res/: example_guns.json  generate_example_guns.py  propellants.csv
res/design_study/: main.py
res/gau/: main.py
res/guns/: _guns_d_1.py  _guns_m_30.py  a_19.py  bs_3.py  example_guns.json  family100mm.py  family85mm.py  generate_example_guns.py  guns.py  guns_100rifled.py  guns_100smooth.py  guns_120.py  guns_76.py  guns_85.py  guns_ZiS-S-53_D-44_52-K.py  guns_a_19.py  guns_d_1.py  guns_d_20.py  guns_d_74.py  guns_m_30.py  guns_m_46.py  guns_m_47.py  guns_s_60.py  guns_type_86_100.py  guns_type_86_152.py  guns_zis_2.py  guns_zis_3.py  m_46.py  m_47.py  misc.py  prop_11_7.py  prop_12_7.py  prop_13_7.py  prop_14_7.py  prop_15_7.py  prop_20_1.py  prop_4_1.py  prop_7_7.py  prop_9_7.py  prop_df1.py  (+8 more)
scripts/: gau_tables.py  propulsion.py
src/ballistics/: __init__.py  _countlines.py  charge.py  form_function.py  gun.py  linecounts.txt  state.py
src/minimalist_interior_ballistics/: __init__.py  charge.py  form_function.py  gun.py  quickstart.md  state.py
tests/: __init__.py  test_designs.py  test_fixed_charge_problem.py  test_problems.py  units.py
tests/design/: test_designs.py  test_fixed_charge_designs.py  test_fixed_volume_designs.py
tests/problem/: test_fixed_charge_problem.py  test_fixed_volume_problem.py  test_known_gun_problems.py  test_pressure_target.py  test_problems.py
(+63 files in other folders)
