[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minimalist_interior_ballistics"
dynamic = ["version"]
authors = [{name="Jinpeng Zhai", email="914962409@qq.com"}]
dependencies = [
  "tabulate>=0.9",
  "attrs>=21.0",
  "cattrs>=21.0",
]
requires-python = ">=3.9"
readme = "README.md"
description = "A minimalist package and GUI tool for the solution of interior ballistic system of equation and its variant problems, applicable to the design and verification of charge design of artillery pieces."
license-files=["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.package-data]
minimalist_interior_ballistics = ["py.typed"]

# [project.gui-scripts]
# minimalist_interior_ballistics-gui = "minimalist_interior_ballistics.gui.main:main"


[project.urls]
Homepage = "https://github.com/Prethea-Phoenixia/minimalist-interior-ballistics"
Issues = "https://github.com/Prethea-Phoenixia/minimalist-interior-ballistics/issues"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.setuptools.dynamic]
version = {attr = "minimalist_interior_ballistics.__version__"}